--- a/sass/partials/utilities/_variables.scss
+++ b/sass/partials/utilities/_variables.scss
@@ -1,31 +1,8 @@
 // Variables
 
-// Paleta de colores base
-$color-principal: #0b829a;
-$color-secundario: #095c78;
-$color-terciario: #a70a94;
-$color-destacado: #5e0754;
-$color-fondo: #f0eeed;
-$color-contenido: #c1d6e6;
-$color-texto: #003d51;
-$color-gradiente-boton: linear-gradient(to bottom, $color-principal, $color-secundario);
-$color-gradiente-boton-hover: linear-gradient(to bottom, $color-terciario, $color-destacado);
+//Fuentes tipográficas
+$fontTitulos: "Rubik", "serif";
 
-// Colores de botones
-$color-textos-botones: $color-fondo;
-$color-botones-navBar: $color-secundario;
-$color-botones-hover: $color-terciario;
-$color-grad-botones-fondo: $color-gradiente-boton;
-$color-grad-botones-hover: $color-gradiente-boton-hover;
-$color-botones-active: $color-terciario;
-$color-sombras: $color-destacado;
-$color-border: $color-terciario;
+$fontSecundaria: "Roboto", "serif";
 
-// Colores de textos
-$color-h1: $color-principal;
-$color-h2: $color-secundario;
-$color-h3: $color-terciario;
-$color-textos-p: $color-texto;
-$color-span: $color-terciario;
-$color-texto-hover: $color-secundario;
-$color-texto-active: $color-terciario;
+$fontParrafos: "Times New Roman", "serif";
