--- a/sass/partials/components/_footer.scss
+++ b/sass/partials/components/_footer.scss
@@ -4,7 +4,7 @@ footer {
     margin-top: 16px;
     text-align: center;
     p {
-      font-family: map-get($map-fontsFamily, "Roboto");
+      font-family: $fontSecundaria;
       @include fontStyle(16px, 200);
       padding: 0px;
       margin: 0px;
