--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 .containerTemplate {
   background-color: #f0eeed;
   color: #003d51;
-  font-family: "Rubik", "serif";
+  font-family: "Roboto", "serif";
   text-align: center;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -88,6 +88,7 @@ nav ul li {
   margin-top: 6px;
   font-size: 36px;
   font-weight: bold;
+  font-family: "Rubik", "serif";
 }
 
 .listContainer {
@@ -121,11 +122,11 @@ nav ul li {
 }
 
 .hamburguesaBoton {
-  border: 3px solid #a70a94;
+  border: 3px solid terciario;
 }
 
 .hamburguesaBoton[aria-expanded=true] {
-  border: 2px solid #a70a94;
+  border: 2px solid terciario;
   background-color: #a70a94;
   box-shadow: 0 0 10px #5e0754;
 }
@@ -177,7 +178,7 @@ p {
   list-style-type: none;
 }
 .listaTour .botonListaTour:hover {
-  color: #a70a94;
+  color: true;
   text-shadow: 0 0 8px #5e0754;
   transition: ease 0.5s;
 }
@@ -231,8 +232,8 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  border: 2px solid #a70a94;
-  box-shadow: 2px 2px 2px #5e0754;
+  border: 2px solid;
+  box-shadow: 2px 2px 2px destacado;
 }
 
 .boton {
@@ -246,7 +247,7 @@ textarea:focus {
 }
 .boton:hover {
   background: linear-gradient(to bottom, #a70a94, #5e0754);
-  box-shadow: 2px 2px 2px #5e0754;
+  box-shadow: 2px 2px 2px destacado;
 }
 .boton:active {
   background-color: #a70a94;
@@ -270,8 +271,9 @@ textarea:focus {
 }
 
 .arrow {
-  font-size: 40px;
-  font-weight: bold;
+  font-family: "Rubik", "serif";
+  font-size: 32px;
+  font-weight: 800;
   color: #a70a94;
   cursor: pointer;
 }
@@ -286,7 +288,7 @@ textarea:focus {
 }
 
 .indicadores .active {
-  background-color: #a70a94;
+  color: #a70a94;
 }
 
 /*FOOTER*/
