--- a/sass/partials/components/_tour.scss
+++ b/sass/partials/components/_tour.scss
@@ -1,26 +1,42 @@
 /*TOUR*/
 
 .listaTour {
-    list-style-type: none;
-    .botonListaTour:hover {
-      color: map-has-key($colores, terciario);
-      text-shadow: 0 0 8px map-get($colores, destacado);
-      transition: ease 0.5s;
-    }
+  list-style-type: none;
+  .botonListaTour:hover {
+    color: map-has-key($colores, terciario);
+    text-shadow: 0 0 8px map-get($colores, destacado);
+    transition: ease 0.5s;
   }
-  
-  .ulTour {
-    margin-right: 24px;
-  }
+}
 
-  .botonListaTour {
-    color: map-get($colores, secundario);
-    text-decoration: none;
-    @include fontStyle(18px, bold);
-  }
+.ulTour {
+  margin-right: 24px;
+}
 
-  .tour {
-    @include flex(column);
-    margin-bottom: 16px;
+.botonListaTour {
+  color: map-get($colores, secundario);
+  text-decoration: none;
+  @include fontStyle(18px, bold);
+}
+
+.tour {
+  @include flex(column);
+  margin-bottom: 16px;
+}
+
+.contenedorListaIMG {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+.fotosTour {
+  width: 150px;
+  margin-top: 16px;
+  border-radius: 16px;
+  transition: ease 0.5s;
+  &:hover {
+    transform: scale(1.1);
   }
-  
+}
