--- a/sass/partials/components/_contact.scss
+++ b/sass/partials/components/_contact.scss
@@ -50,3 +50,19 @@ form {
     resize: vertical;
     min-height: 40px;
   }
+
+  .acordeonStyle {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    @extend .botonNavBar;
+    padding: 16px;
+    margin: 0;
+    font-size: 20px;
+  }
+
+  .respuesta {
+    @include fontStyle(16px, bold);
+    color: map-get($colores, principal);
+  }
+
