--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,7 @@ nav ul li {
   list-style-type: none;
 }
 
-.botonNavBar {
+.botonNavBar, .acordeonStyle {
   color: #095c78;
   text-decoration: none;
   font-size: 24px;
@@ -112,7 +112,7 @@ nav ul li {
   margin: 0 8px;
   transition: ease 0.5s;
 }
-.botonNavBar:hover {
+.botonNavBar:hover, .acordeonStyle:hover {
   color: #a70a94;
   text-shadow: 0 0 10px rgba(167, 10, 148, 0.5);
 }
@@ -275,6 +275,21 @@ textarea:focus {
   min-height: 40px;
 }
 
+.acordeonStyle {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  padding: 16px;
+  margin: 0;
+  font-size: 20px;
+}
+
+.respuesta {
+  font-size: 16px;
+  font-weight: bold;
+  color: #0b829a;
+}
+
 /* IFRAMES: Music & Video */
 .musicEdit, .videoEdit {
   width: 70%;
@@ -418,7 +433,7 @@ footer p {
   nav ul li {
     padding: 0;
   }
-  .botonNavBar {
+  .botonNavBar, .acordeonStyle {
     font-size: 18px;
     font-weight: bold;
     padding: 0 6px;
