--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,8 +17,6 @@
   color: #003d51;
   font-family: "Roboto", "serif";
   text-align: center;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
 }
 
 /*BIO-HOME*/
@@ -282,12 +280,18 @@ textarea:focus {
   padding: 16px;
   margin: 0;
   font-size: 20px;
+  width: 60vw;
+  max-width: 800px;
+  margin: auto;
 }
 
 .respuesta {
   font-size: 16px;
   font-weight: bold;
   color: #0b829a;
+  width: 60vw;
+  max-width: 800px;
+  margin: auto;
 }
 
 /* IFRAMES: Music & Video */
