ajuste de medidas responsive en tour

--- a/sass/partials/components/_mediaQ.scss
+++ b/sass/partials/components/_mediaQ.scss
@@ -5,15 +5,26 @@
       width: 160px;
       margin-left: auto;
     }
+    .listaTour, .botonListaTour {
+      font-size: 13px;
+    }
+    .fotosTour {
+      width: 80px;
+    }
   }
   
   @media (max-width: 768px) {
     .logo {
       width: 120px;
     }
-  
     .listContainer {
       margin-right: 0px;
+    }
+    .listaTour, .botonListaTour {
+      font-size: 14px;
+    }
+    .fotosTour {
+      width: 100px;
     }
   }
   
