--- a/sass/partials/components/_mediaQ.scss
+++ b/sass/partials/components/_mediaQ.scss
@@ -11,6 +11,10 @@
     .fotosTour {
       width: 80px;
     }
+    .fotosBio {
+      width: 200px;
+    }
+    
   }
   
   @media (max-width: 768px) {
