--- a/sass/partials/components/_mediaQ.scss
+++ b/sass/partials/components/_mediaQ.scss
@@ -14,7 +14,9 @@
     .fotosBio {
       width: 200px;
     }
-    
+    .pBio {
+      font-size: 12px;
+    }
   }
   
   @media (max-width: 768px) {
