--- a/sass/partials/components/_mediaQ.scss
+++ b/sass/partials/components/_mediaQ.scss
@@ -6,16 +6,13 @@
       margin-left: auto;
     }
     .listaTour, .botonListaTour {
-      font-size: 13px;
+      font-size: 12px;
     }
     .fotosTour {
-      width: 80px;
+      width: 72px;
     }
     .fotosBio {
       width: 200px;
-    }
-    .pBio {
-      font-size: 12px;
     }
   }
   
@@ -31,6 +28,12 @@
     }
     .fotosTour {
       width: 100px;
+    }
+    .pBio, .discos {
+      font-size: 12px;
+    }
+    .articulos {
+      width: 44%;
     }
   }
   
