--- a/sass/partials/components/_mediaQ.scss
+++ b/sass/partials/components/_mediaQ.scss
@@ -30,10 +30,11 @@
       width: 100px;
     }
     .pBio, .discos {
-      font-size: 12px;
+      font-size: 13px;
+      line-height: 1.3;
     }
     .articulos {
-      width: 44%;
+      width: 56%;
     }
   }
   
