--- a/styles/styles.css
+++ b/styles/styles.css
@@ -439,10 +439,11 @@ footer p {
     width: 100px;
   }
   .pBio, .discos {
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.3;
   }
   .articulos {
-    width: 44%;
+    width: 56%;
   }
 }
 @media (max-width: 1024px) {
